tests/purus/passing/invalid-parses/invalid-parses/VariableAsConstructor/VariableAsConstructor.purs
module VariableAsConstructor where

messedup :: Boolean -> Boolean
messedup (a b) = True
